# qr_code_scaaner

./: CMakeLists.txt  README.md
framehandler/: CMakeLists.txt  FrameHandler.cpp  FrameHandler.h
libs/Archive/: Archive.cpp  Archive.h  CMakeLists.txt
libs/Scanner/: CMakeLists.txt  Scanner.cpp  Scanner.h  test_main.cpp
libs/UI/: CMakeLists.txt  UI.cpp  UI.h
src/: main.cpp
